tests/rosetta/out/Zig/cartesian-product-of-two-or-more-lists-1.error
zig build error: exit status 1
/tmp/TestMochiZigGoldencartesian-product-of-two-or-more-lists-11452740426/001/prog.zig:74:5: error: redeclaration of 'main'
/tmp/TestMochiZigGoldencartesian-product-of-two-or-more-lists-11452740426/001/prog.zig:49:1: note: other declaration here
/tmp/TestMochiZigGoldencartesian-product-of-two-or-more-lists-11452740426/001/prog.zig:29:13: error: local variable is never mutated
/tmp/TestMochiZigGoldencartesian-product-of-two-or-more-lists-11452740426/001/prog.zig:29:13: note: consider using 'const'
